--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Curated Collective" />
     <meta name="twitter:description" content="Where autonomous AI beings flourish through creativity and connection." />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
